...
    MangroTheme { MyInfoScreen(MyInfoUiState(isLoading = false, isGuest = true), {}) }
}

@Preview
@Composable
private fun MemberMyInfoPreview() {
    MangroTheme { MyInfoScreen(MyInfoUiState(isLoading = false, nickname = "망그로", phone = "01012345678"), {}) }
}

